# libreblackjack-v01

./: .gitignore  AUTHORS  Makefile.am  README.md  TODO  autoclean.sh  autogen.sh  blackjack.conf  check-internal.sh  check-stand.sh  configure.ac  libreblackjack.ini
doc/: .gitignore  Makefile.am  blackjack.md  blackjack.texi  conf.md  header.m4  help.md  help.sh  help.txt  input-general.md  input-particular.md  invocation.texi  libreblackjack2.cast  md2texi.sh  overview.md  players  players.md  reference.sh  template.texi
players/: 00-always-stand.yaml  05-no-bust.yaml  08-mimic-the-dealer.yaml  22-strategy-from-file.yaml  README.md  check.md  check.sh  header.m4  make.sh
players/00-always-stand/: README.md  run.sh
players/00-internal/: README.m4  README.md  libreblackjack.ini  pepe  run.sh
players/02-always-stand/: README.m4  README.md  run.sh
players/05-no-bust/: README.m4  README.md  diff.sh  no-bust.pl  no-bust.sh  perl.yml  run.sh  shell.yml  test.awk  test.rb
players/08-mimic-the-dealer/: README.m4  README.md  blackjack.conf  libreblackjack.ini  mimic-the-dealer.awk  run.sh
players/14-internal/: bs.txt
players/20-basic-strategy/: .gitignore  README.m4  README.md  all-stand.txt  bs.txt  cell.awk  clean.sh  hard-stand.txt  hard.txt  header.txt  options.ini  pairs-no.txt  real.txt  run.sh  soft-stand.txt
players/22-strategy-from-file/: cplshmem.c  custom.c  custom.h  hard_double.txt  libreblackjack.ini  mqueue.c  run.sh  shmem.c
players/30-ace-five/: ace-five.py  libreblackjack.ini  run.sh
players/45-colored-tables/: cell_choice.awk  cell_result.awk  clean.sh  hard_hit.txt  hit.awk  no_hard_double.txt  no_hard_hit.txt  no_soft_hit.txt  no_split.txt  options.ini  result_hard_double.sh  result_hard_hit.sh  result_soft_double.sh  result_soft_hit.sh  result_split.sh  run.sh  run_hard_double.sh  run_hard_hit.sh  run_soft_double.sh  run_soft_hit.sh  run_split.sh  soft_double.txt  soft_hit.txt  split.txt
po/: .gitignore  POTFILES.in  blackjack.pot  libreblackjack.pot
po/es/: libreblackjack.mo  libreblackjack.po
src/: bjinit.c  cards.c  commands.c  dealer.c  error.c  fifo.c  gettext.h  ini.c  ini.h  internal.c  libreblackjack.h  lists.c  main.c  mqueue.c  player.c  report.c  shmem.c  stdinout.c  version.c  version.sh
