# Copyright (C) 2016--2020 jeremy theler
# This file is part of libreblackjack.
# This file is free software: you are free to change and redistribute it.
# There is NO WARRANTY, to the extent permitted by law.

info_TEXINFOS = blackjack.texi
doc_blackjack_TEXINFOS = fdl.texi

CLEANFILES = *.aux *.cp *.cps *.fn *.ky *.log *.op *.pg *.toc *.tp *.vr
DISTCLEANFILES = ${CLEANFILES}
